package com.example.rep2;

public class CompositeException extends RuntimeException {

    public CompositeException(String message) {
        super(message);
    }
}